--- a/movies-search-engine/src/styles/Movie.css
+++ b/movies-search-engine/src/styles/Movie.css
@@ -1,3 +1,46 @@
 .movie__container {
-    background-color: orange;
+    background-color: black;
+    width: 210px;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.movie__image {
+    margin-top: 5px;
+    border: 1px solid orange;
+    height: 200px;
+    width: 200px;
+}
+
+.movie__title {
+    display: flex;
+    margin: 5px;
+    text-align: center;
+    font-weight: bold;
+    font-size: large;
+    text-overflow: ellipsis;
+    white-space: hidden;
+    overflow: hidden;
+    color: orange;
+    align-items: center;
+    justify-content: center;
+    height: 40%;
+    width: 96%;
+}
+
+.movie__releasedate {
+    display: flex;
+    text-align: center;
+    font-weight: bold;
+    font-size: large;
+    text-overflow: ellipsis;
+    white-space: hidden;
+    overflow: hidden;
+    color: orange;
+    align-items: center;
+    justify-content: center;
+    height: 5%;
+    width: 96%;
 }
